# credit-portfolio-dashboard

./: .gitignore  Factor_Credit_White_Paper_v2.docx  README.md  build_docx.py  config.yaml  pyproject.toml  requirements.txt  streamlit_app.py  white_paper.docx  white_paper.ipynb  white_paper_executed.ipynb  ~$ite_paper.docx
.streamlit/: config.toml
data/: fred_credit_spreads.csv
docs/: index_methodology.yaml
src/credit_portfolio/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  dashboard.py.bak  log.py
src/credit_portfolio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/credit_portfolio/analytics/: __init__.py  attribution.py  commentary.py  explainer.py  monte_carlo.py  stress_test.py
src/credit_portfolio/backtests/: bucket_backtest.py  ml_backtest.py
src/credit_portfolio/charts/: __init__.py  backtest_charts.py  bl_charts.py  empirical.py  ml_backtest_charts.py  ml_charts.py  regime.py  style.py
src/credit_portfolio/data/: __init__.py  constants.py  loader.py  universe.py
src/credit_portfolio/models/: __init__.py  black_litterman.py  hmm_regime.py  (+2 more)
tests/: conftest.py  test_config.py  test_integration.py  test_no_hardcoding.py  test_smoke.py
tests/analytics/: test_attribution.py  test_commentary.py
tests/charts/: test_charts.py
tests/data/: test_constants.py  test_loader.py  test_universe.py
tests/models/: test_black_litterman.py  test_hmm_regime.py  test_prophet_views.py
tests/optimizers/: test_factor_tilt.py  test_mean_variance_bl.py  test_risk_parity.py
tests/pipelines/: test_bl_pipeline.py
(+8 files in other folders)
